# ORIE5270-finalproject

./: .gitignore  README.md  fetch_weather_forecasting_data.py  pyproject.toml  requirements.txt
data_processing/: README.md  __init__.py  clean_data.py  fetch_weather_forecasting_data.py  merge_datasets.py
data_processing/data/processed/: modeling_table.csv
data_processing/data/raw/: daily_weather_forecasting.csv
data_processing/data/sample/: sample_modeling_table.csv
docs/: data_dictionary.md  features.md
feature_engineering/: README.md  __init__.py  features.py
model/: model.py
model_training/: README.md  __init__.py  model.py
orie5270_ozone/: __init__.py
test/: test_merge.py  test_model.py  test_package.py
