[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orie5270-ozone-aqi"
version = "0.1.0"
description = "Ozone AQI prediction for Tompkins County, NY (ORIE5270 final project)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "requests>=2.28",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "data_processing*",
    "feature_engineering*",
    "model_training*",
    "orie5270_ozone*",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
addopts = "-q"

# Untested network / CLI scripts would dominate misses; focus coverage on library modules.
[tool.coverage.run]
omit = [
    "*/fetch_weather_forecasting_data.py",
    "*/clean_data.py",
]

[tool.coverage.report]
precision = 0
